fix: spacing between h2 headings in redoc

--- a/packages/docs/src/css/custom/redoc.scss
+++ b/packages/docs/src/css/custom/redoc.scss
@@ -170,4 +170,7 @@
             line-height: toRem(32);
         }
     }
+    div:not(:first-child) + div.anchor__h2 > div > div > div > h2 {
+        margin-top: 0;
+    }
 }
